--- a/webstore-frontend/package.json
+++ b/webstore-frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
