--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ webstore-backend/src/main/resources/application.properties
 webstore-backend/src/main/resources/application.properties
 webstore-backend/src/main/resources/application.properties
 webstoredb.sql
+.idea/workspace.xml
