In-progress Debugging

--- a/webstore-backend/src/main/resources/application.properties
+++ b/webstore-backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/webstoredb?serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=702230
+spring.profiles.active=database
