--- a/webstore-backend/src/main/resources/application.properties
+++ b/webstore-backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/webstoredb?serverTimezone=UTC&
 spring.datasource.username=root
 spring.datasource.password=702230
 spring.profiles.active=database
+security.basic.enabled=false
+management.security.enabled=false
