--- a/webstore-backend/src/main/resources/application.properties
+++ b/webstore-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/webstoredb?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=badrad
+spring.datasource.password=nope
 spring.profiles.active=database
 security.basic.enabled=false
 management.security.enabled=false
